# nano-banana

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT_nano-banana.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
commands/: edit.md  setup.md
docs/plans/: 2026-02-15-edit-command-and-hooks-design.md  2026-02-15-edit-command-and-hooks-plan.md  2026-03-12-video-skill-and-sdk-migration-design.md  2026-03-12-video-skill-and-sdk-migration-plan.md
hooks/: hooks.json  validate-output.py
skills/: __init__.py
skills/common/: __init__.py  client.py  env.py  http_client.py  image_utils.py  presets.py
skills/diagram/: SKILL.md  __init__.py
skills/diagram/scripts/: __init__.py  generate_diagram.py  generate_diagram_ai.py
skills/image/: SKILL.md  __init__.py
skills/image/scripts/: __init__.py  generate_image.py
skills/kroki/: SKILL.md
skills/kroki/scripts/: render_diagram.py
skills/video/: SKILL.md
skills/video/scripts/: __init__.py  generate_video.py
skills/visual-abstract/: SKILL.md
