[project]
name = "nano-banana"
version = "1.0.4"
description = "AI-powered image and diagram generation for Claude Code using Nano Banana Pro"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "flight505", email = "flight505@users.noreply.github.com" }
]
requires-python = ">=3.8"
keywords = [
    "claude-code",
    "image-generation",
    "diagram",
    "ai",
    "nano-banana",
    "gemini",
    "openrouter",
    "visualization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    # No required dependencies - uses Python stdlib only
]

[project.optional-dependencies]
dotenv = [
    "python-dotenv>=0.19.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=0.19.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/flight505/nano-banana"
Repository = "https://github.com/flight505/nano-banana"
Documentation = "https://github.com/flight505/nano-banana#readme"
Issues = "https://github.com/flight505/nano-banana/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
